Fixed and finalized the homepage.html file

--- a/homepage.html
+++ b/homepage.html
@@ -6,19 +6,11 @@
     <title>Homepage</title>
   </head>
   <body>
-    <table width="100%">
-      <tr>
-        <td align="left"><p>Kenrikk Faelnar</p></td>
-        <td align="right">
-          <p align="right">
-            <a href="homepage.html" target="_blank">Home</a> /
-            <a href="projects.html" target="_blank">Projects</a> /
-            <a href="articles.html" target="_blank">Articles</a> /
-            <a href="contact.html" target="_blank">Contact</a>
-          </p>
-        </td>
-      </tr>
-    </table>
-    <h1 align="center">Frontend Developer</h1>
+    <p>Kenrikk Faelnar</p>
+    <a href="homepage.html" target="_blank">Home</a>
+    <a href="projects.html" target="_blank">Projects</a>
+    <a href="articles.html" target="_blank">Articles</a>
+    <a href="contact.html" target="_blank">Contact</a>
+    <h1>Frontend Developer</h1>
   </body>
 </html>
