Finished projects.html

--- a/projects.html
+++ b/projects.html
@@ -6,33 +6,38 @@
     <title>Projects</title>
   </head>
   <body>
-    <table width="100%">
-      <tr>
-        <td align="right">
-          <p align="right">
-            <a href="homepage.html" target="_blank">Home</a> /
-            <a href="projects.html" target="_blank">Projects</a> /
-            <a href="articles.html" target="_blank">Articles</a> /
-            <a href="contact.html" target="_blank">Contact</a>
-          </p>
-        </td>
-      </tr>
-    </table>
-    <table width="100%">
-      <tr>
-        <td align="left">
-          <h1>Projects</h1>
-          <p>HTML Only Portfolio</p>
-          <hr align="left" width="20%" />
-          <p>Calculator</p>
-          <hr align="left" width="20%" />
-          <p>Quiz App</p>
-          <hr align="left" width="20%" />
-          <p>Countdown Timer</p>
-          <hr align="left" width="20%" />
-          <p>Product Upcoming Page</p>
-        </td>
-      </tr>
-    </table>
+    <h1>Projects</h1>
+    <ul>
+      <li>HTML Only Porfolio</li>
+      <li>Calculator</li>
+      <li>Quiz App</li>
+      <li>Countdown Timer</li>
+      <li>Product Upcoming Page</li>
+    </ul>
+
+    <h2>Work Experience</h2>
+    <ul>
+      <li><b>roadmap.sh</b></li>
+      <p>Solved all the frontend projcts</p>
+      <li><b>OpenSource Work</b></li>
+      <p>Contributed to various open source projects</p>
+    </ul>
+
+    <h2>Education</h2>
+    <p>Graduated with a Bachelor's of Computer Science</p>
+    <p>Skills Obtained:</p>
+    <ul>
+      <li>Object Oriented Programming</li>
+      <li>Data Structures and Algorithms</li>
+      <li>Web Development</li>
+      <li>Software Engineering</li>
+      <li>Database Management</li>
+      <li>Computer Networks</li>
+      <li>Operating Systems</li>
+      <li>Computer Architecture</li>
+      <li>Software Testing</li>
+      <li>Software Project Management</li>
+      <li>Discreet Mathematics</li>
+    </ul>
   </body>
 </html>
