Added hyperlinks to link to accounts

--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,12 @@
     <ul>
       <li><b>roadmap.sh</b></li>
       <p>Solved all the frontend projcts</p>
+      <a href="https://roadmap.sh/account" target="_blank">Visit my profile</a>
       <li><b>OpenSource Work</b></li>
       <p>Contributed to various open source projects</p>
+      <a href="https://github.com/LourdArkin" target="_blank"
+        >Visit my GitHub Profile</a
+      >
     </ul>
 
     <h2>Education</h2>
