--- a/articles.html
+++ b/articles.html
@@ -5,5 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articles</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Articles</h1>
+      <a href="homepage.html" target="_blank">Home</a>
+      <a href="projects.html" target="_blank">Projects</a>
+      <a href="articles.html" target="_blank">Articles</a>
+      <a href="contact.html" target="_blank">Contact</a>
+    </header>
+    <h2>Reviews from my Teachers</h2>
+    <ul>
+      <li>
+        Ken was a brilliant student; always stood out with his assignments.
+      </li>
+      <p>Jane Doe <br />Assistant Professor</p>
+      <li>
+        Ken's work ethic is commendable. He consistently delivered high-quality
+        projects.
+      </li>
+      <p>Jane Doe <br />Assistant Professor</p>
+      <li>
+        Ken's attention to detail and creativity in his projects were
+        impressive.
+      </li>
+      <p>Jane Doe <br />Assistant Professor</p>
+    </ul>
+    <footer>
+      <p>&copy; all rights reserved 2025</p>
+    </footer>
+  </body>
 </html>
