Added navigation links

--- a/homepage.html
+++ b/homepage.html
@@ -6,11 +6,15 @@
     <title>Homepage</title>
   </head>
   <body>
-    <p>Kenrikk Faelnar</p>
-    <a href="homepage.html" target="_blank">Home</a>
-    <a href="projects.html" target="_blank">Projects</a>
-    <a href="articles.html" target="_blank">Articles</a>
-    <a href="contact.html" target="_blank">Contact</a>
-    <h1>Frontend Developer</h1>
+    <header>
+      <p>Kenrikk Faelnar</p>
+      <nav>
+        <a href="homepage.html" target="_blank">Home</a>
+        <a href="projects.html" target="_blank">Projects</a>
+        <a href="articles.html" target="_blank">Articles</a>
+        <a href="contact.html" target="_blank">Contact</a>
+      </nav>
+      <h1>Frontend Developer</h1>
+    </header>
   </body>
 </html>
