--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,15 @@
     <title>Projects</title>
   </head>
   <body>
-    <h1>Projects</h1>
+    <header>
+      <h1>Projects</h1>
+      <nav>
+        <a href="homepage.html" target="_blank">Home</a>
+        <a href="projects.html" target="_blank">Projects</a>
+        <a href="articles.html" target="_blank">Articles</a>
+        <a href="contact.html" target="_blank">Contact</a>
+      </nav>
+    </header>
     <ul>
       <li>HTML Only Porfolio</li>
       <li>Calculator</li>
