--- a/articles.html
+++ b/articles.html
@@ -8,10 +8,12 @@
   <body>
     <header>
       <h1>Articles</h1>
-      <a href="homepage.html" target="_blank">Home</a>
-      <a href="projects.html" target="_blank">Projects</a>
-      <a href="articles.html" target="_blank">Articles</a>
-      <a href="contact.html" target="_blank">Contact</a>
+      <nav>
+        <a href="homepage.html" target="_blank">Home</a>
+        <a href="projects.html" target="_blank">Projects</a>
+        <a href="articles.html" target="_blank">Articles</a>
+        <a href="contact.html" target="_blank">Contact</a>
+      </nav>
     </header>
     <h2>Reviews from my Teachers</h2>
     <ul>
