Added SEO tags to all HTML files

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
+    <meta name="description" content="Kenrikk Faelnar's Portfolio" />
+    <meta
+      name="keywords"
+      content="Kenrikk Faelnar, Frontend Developer, Portfolio"
+    />
+    <meta name="author" content="Kenrikk Faelnar" />
   </head>
   <body>
     <header>
